# classy-streams

./: CMakeLists.txt  README.md
include/: BinaryIO.hpp  BufferStreams.hpp  ConsoleStreams.hpp  FileStreams.hpp  IOReadWrite.hpp  IOStreams.hpp  NetworkStreams.hpp  Patterns.hpp  TextIO.hpp
source/: test_binary_io.cpp  test_client_local.cpp  test_client_tcp.cpp  test_server_local.cpp  test_server_tcp.cpp  tests.cpp
source/include/: NetworkStreams.hpp
